tui/src/snapshots/tryout_tui__ui__tests__a_click_on_a_php_entry_opens_its_versions_beside_it.snap
---
source: src/ui.rs
expression: "render(&a, 100, 30).backend()"
---
" tryout  demo                                                                           3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ v13 https://v13.demo.ddev.site ────────────────────────────────╮"
"│ ● main                         ││ +                                                              │"
"│   main · 32d1f51               ││                                                                │"
"│ ◆ v╭ v13 ─────────────────────────────────────────────────────╮╭─────────────────────────╮       │"
"│   1│ PHP 8.4                        applies at once        ▸  ││   PHP 8.2               │       │"
"│ ○ b│ Open site                      in the browser            ││   PHP 8.3               │       │"
"│   m│ Open backend                   /typo3/ in the browser    ││ ✓ PHP 8.4  running now  │       │"
"│    │ Make primary                   at the project URL        │╰─────────────────────────╯       │"
"│    │ Unserve                        keeps its database        │ev.site                           │"
"│    │ Unserve and drop its database                            │                                  │"
"│    │──────────────────────────────────────────────────────────│                                  │"
"│    │ Update from its base branch                              │worktree                          │"
"│    │ Switch TYPO3 version…                                    │                                  │"
"│    │ Apply Gerrit patch…            browse open changes       │                                  │"
"│    │ Reset Core + rebuild                                     │                                  │"
"│    │──────────────────────────────────────────────────────────│                                  │"
"│    │ Run command…                   in its PHP and DB         │                                  │"
"│    │ Fresh install…                 wipes DB + fileadmin      │                                  │"
"│    │──────────────────────────────────────────────────────────│                                  │"
"│    │ Rename…                        branch untouched          │                                  │"
"│    │ Remove…                        deletes the checkout      │                                  │"
"│    ╰──────────────────────────────────────────────────────────╯                                  │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯"
" ↑↓ select   ⏎ run   esc cancel                                                                     "
