tui/src/snapshots/tryout_tui__ui__tests__a_right_click_menu_opens_at_the_pointer_and_stays_on_screen.snap
---
source: src/ui.rs
expression: "render(&a, 80, 24).backend()"
---
" tryout  demo                                                       3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ v13 https://v13.demo.ddev.site ────────────╮"
"│ ● main                         ││ +                                          │"
"│   main · 32d1f51               ││                                            │"
"│ ◆ v13                         ±││  where    detached from 13.4               │"
"│   13.4 +2 · 32d1f51            ││  head     32d1f51 [TASK] Raise phpstan t…  │"
"│ ○ bugfix          ╭ v13 ─────────────────────────────────────────────────────╮"
"│   main · 32d1f51  │ Open site                      in the browser            │"
"│                   │ Open backend                   /typo3/ in the browser    │"
"│                   │ Make primary                   at the project URL        │"
"│                   │ Unserve                        keeps its database        │"
"│                   │ Unserve and drop its database                            │"
"│                   │──────────────────────────────────────────────────────────│"
"│                   │ Update from its base branch                              │"
"│                   │ Switch TYPO3 version…                                    │"
"│                   │ Apply Gerrit patch…            browse open changes       │"
"│                   │ Reset Core + rebuild                                     │"
"│                   │──────────────────────────────────────────────────────────│"
"│                   │ Run command…                   in its PHP and DB         │"
"│                   │ Fresh install…                 wipes DB + fileadmin      │"
"│                   │──────────────────────────────────────────────────────────│"
"│                   │ Rename…                        branch untouched          │"
"╰───────────────────│ Remove…                        deletes the checkout      │"
" ↑↓ select   ⏎ run  ╰──────────────────────────────────────────────────────────╯"
