tui/src/snapshots/tryout_tui__ui__tests__a_tab_you_named_shows_your_name_and_the_prompt_draws.snap
---
source: src/ui.rs
expression: "render(&a, 80, 12).backend()"
---
" tryout  demo                                                       3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ main https://demo.ddev.site ───────────────╮"
"│ ● main                       ▶2││ 1 tests   2 shell   +                      │"
"│   main · 32d1f51               ││ ╭ Rename tab ──────────────────────────────╮"
"│ ◆ v13                         ±││ │ shell▏                                   │"
"│   13.4 +2 · 32d1f51            ││ │                                          │"
"│ ○ bugfix                       ││ │ empty: its program's own title           │"
"│   main · 32d1f51               ││ ╰──────────────────────────────────────────╯"
"│                                ││                                            │"
"│                                ││                                            │"
"╰────────────────────────────────╯╰────────────────────────────────────────────╯"
" ⏎ keep   esc cancel                                                            "
