tui/src/snapshots/tryout_tui__ui__tests__a_worktree_with_tabs_shows_its_tab_bar.snap
---
source: src/ui.rs
expression: "render(&a, 80, 12).backend()"
---
" tryout  demo                                                       3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ main https://demo.ddev.site ───────────────╮"
"│ ● main                       ▶2││ 1 shell   2 shell   +                      │"
"│   main · 32d1f51               ││█                                           │"
"│ ◆ v13                         ±││                                            │"
"│   13.4 +2 · 32d1f51            ││                                            │"
"│ ○ bugfix                       ││                                            │"
"│   main · 32d1f51               ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"╰────────────────────────────────╯╰────────────────────────────────────────────╯"
" ^G back to the list   every other key goes to the shell                        "
