tui/src/snapshots/tryout_tui__ui__tests__failed.snap
---
source: src/ui.rs
expression: "render(&a, 60, 12).backend()"
---
" tryout  demo                                               "
"╭ Worktrees ─────────────────╮╭────────────────────────────╮"
"│ Could not list worktrees   ││                            │"
"│                            ││                            │"
"│ ddev tryout worktree list  ││                            │"
"│ failed: project not        ││                            │"
"│ running                    ││                            │"
"│                            ││                            │"
"│ r  retry                   ││                            │"
"│                            ││                            │"
"╰────────────────────────────╯╰────────────────────────────╯"
" ↑↓ select   ⏎ shell   r reload   q quit                    "
