tui/src/snapshots/tryout_tui__ui__tests__layout_at_80x24.snap
---
source: src/ui.rs
expression: "render(&loaded(), 80, 24).backend()"
---
" tryout  demo                                                       3 worktrees "
"╭ Worktrees ─────────────────────╮╭ main https://demo.ddev.site ───────────────╮"
"│ ● main                         ││                                            │"
"│   main · 32d1f51               ││  where    main                             │"
"│ ◆ v13                         ±││  head     32d1f51 [TASK] Raise phpstan t…  │"
"│   13.4 +2 · 32d1f51            ││  changes  clean                            │"
"│ ○ bugfix                       ││  dir      project root                     │"
"│   main · 32d1f51               ││  site     https://demo.ddev.site           │"
"│                                ││  runtime  PHP 8.4 · db_main                │"
"│                                ││                                            │"
"│                                ││  Enter  open a shell in this worktree      │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"╰────────────────────────────────╯╰────────────────────────────────────────────╯"
" ↑↓ select   ⏎ shell   a actions   r reload   q quit                            "
