tui/src/snapshots/tryout_tui__ui__tests__loading.snap
---
source: src/ui.rs
expression: "render(&a, 60, 12).backend()"
---
" tryout  demo                                               "
"╭ Worktrees ─────────────────╮╭────────────────────────────╮"
"│ Loading worktrees…         ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"╰────────────────────────────╯╰────────────────────────────╯"
" ↑↓ select   ⏎ shell   a actions   r reload   q quit        "
