tui/src/snapshots/tryout_tui__ui__tests__new_worktree_form.snap
---
source: src/ui.rs
expression: "render(&a, 80, 30).backend()"
---
" tryout  demo                                                       3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ main https://demo.ddev.site ───────────────╮"
"│ ● main                         ││ +                                          │"
"│   main · 32d1f51               ││                                            │"
"│ ◆ v13                         ±││  where    main                             │"
"│   13.4╭ New worktree ────────────────────────────────────────────────╮an t…  │"
"│ ○ bugf│ Name                                                         │       │"
"│   main│   fix-9▏                                                     │       │"
"│       │   becomes worktrees/<name> — letters, digits, . _ -          │       │"
"│       │                                                              │       │"
"│       │ Based on                                                     │       │"
"│       │   › main                                                     │e      │"
"│       │     13.4                                                     │       │"
"│       │     12.4                                                     │       │"
"│       │                                                              │       │"
"│       │ [ ] Serve it now (its own URL, the best PHP it accepts)      │       │"
"│       │                                                              │       │"
"│       ╰──────────────────────────────────────────────────────────────╯       │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"╰────────────────────────────────╯╰────────────────────────────────────────────╯"
" tab next field   ↑↓ choose   space tick   ⏎ go   esc cancel                    "
