tui/src/snapshots/tryout_tui__ui__tests__remove_confirmation.snap
---
source: src/ui.rs
expression: "render(&a, 80, 24).backend()"
---
" tryout  demo                                                       3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ main https://demo.ddev.site ───────────────╮"
"│ ● main                         ││ +                                          │"
"│   main · 32d1f51               ││                                            │"
"│ ◆ v13                         ±││  where    main                             │"
"│   13.4╭ Remove v13? ─────────────────────────────────────────────────╮an t…  │"
"│ ○ bugf│ Deletes the checkout worktrees/v13 and everything in it,     │       │"
"│   main│ including vendor/, var/ and uncommitted work.                │       │"
"│       │ A served site goes too; its database is kept.                │       │"
"│       │                                                              │       │"
"│       │ y go ahead   any other key cancel                            │       │"
"│       ╰──────────────────────────────────────────────────────────────╯e      │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"╰────────────────────────────────╯╰────────────────────────────────────────────╯"
" y go ahead   any other key cancels                                             "
