tui/src/snapshots/tryout_tui__ui__tests__the_action_menu_over_a_served_worktree.snap
---
source: src/ui.rs
expression: "render(&a, 100, 26).backend()"
---
" tryout  demo                                                                           3 worktrees "
"╭ Worktrees ─────────────────────╮╭ v13 https://v13.demo.ddev.site ────────────────────────────────╮"
"│ ● main                         ││ ╭ v13 ───────────────────────────────────────────╮             │"
"│   main · 32d1f51               ││ │ status            project overview             │             │"
"│ ◆ v13                         ±││ │ checkout          switch TYPO3 version         │             │"
"│   13.4 +2 · 32d1f51            ││ │ patch             apply a Gerrit change        │             │"
"│ ○ bugfix                       ││ │ download          update from its base branch  │             │"
"│   main · 32d1f51               ││ │ reset             reset Core + rebuild         │             │"
"│                                ││ │ exec              run a command in it          │             │"
"│                                ││ │ worktree use      make it the primary          │             │"
"│                                ││ │ worktree unserve  stop serving it              │             │"
"│                                ││ │ worktree remove   delete this checkout         │             │"
"│                                ││ │ launch frontend   open the site                │             │"
"│                                ││ │ launch backend    open /typo3/                 │             │"
"│                                ││ ╰────────────────────────────────────────────────╯             │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"│                                ││                                                                │"
"╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯"
" ↑↓ select   ⏎ run   esc cancel                                                                     "
