tui/src/snapshots/tryout_tui__ui__tests__the_activity_block_lists_jobs_and_a_click_opens_one.snap
---
source: src/ui.rs
expression: "render(&a, 80, 24).backend()"
---
" tryout  demo                                                                   "
"╭ Worktrees ────────────── + new ╮╭ main https://demo.ddev.site ───────────────╮"
"│ ● main                         ││ +                                          │"
"│   main · 32d1f51               ││                                            │"
"│ ◆ v13                         ±││  where    main                             │"
"│   13.4 +2 · 32d1f51            ││  head     32d1f51 [TASK] Raise phpstan t…  │"
"│ ○ bugfix                       ││  changes  clean                            │"
"│   main · 32d1f51               ││  dir      project root                     │"
"│                                ││  site     https://demo.ddev.site           │"
"│                                ││  runtime  PHP 8.4 · db_main                │"
"│                                ││                                            │"
"│                                ││  Enter  open a shell in this worktree      │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"╰────────────────────────────────╯│                                            │"
"╭ Activity ──────────────────────╮│                                            │"
"│ ✓ worktree use v13 · 0s        ││                                            │"
"│ ✗ fail · exit 3                ││                                            │"
"╰────────────────────────────────╯╰────────────────────────────────────────────╯"
" ↑↓ select   ⏎ shell   t new tab   n next agent   a actions  ✓ worktree use v13 "
